--- a/_common/styleguide/styleguide.css
+++ b/_common/styleguide/styleguide.css
@@ -7,8 +7,8 @@
 .g-wrap .g-example-wrap .g-example {background-color: var(--krds-light-color-surface-white-subtle);border: var(--krds-light-border-width-variable-regular) solid var(--krds-light-color-border-gray);border-radius: var(--krds-radius-xlarge2);padding:4rem;}
 .g-wrap .g-example-wrap .g-example.bg-dark-gray {background-color:var(--krds-color-light-gray-5);}
 .g-wrap .g-example-wrap .g-example:has(div) {display: flex;flex-direction: column;gap: 1rem;}
-.g-wrap .g-example-wrap .g-example > strong {color:var(--krds-light-color-text-primary)}
-.g-wrap .g-example-wrap .g-example > strong:not(strong:first-child) {margin-top:2rem}
+.g-wrap .g-example-wrap .g-example > strong {color: var(--krds-light-color-text-basic);font-weight: var(--krds-font-weight-regular);}
+.g-wrap .g-example-wrap .g-example > strong:not(strong:first-child) {margin-top:4rem}
 .g-wrap .g-example-wrap .g-example .g-example-inner {display: flex;flex-wrap: wrap;gap: 2rem;align-items: center;}
 .g-wrap .g-example-wrap .g-example .g-example-inner.flex-dire-col {gap:1rem;align-items: flex-start;}
 .g-wrap .g-example-wrap .g-example .g-example-inner > div {display:flex;align-items: center;gap: var(--krds-gap-5);}
